Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service
  namespace: aceest-fitness
  labels:
    app: aceest-fitness
spec:
  type: LoadBalancer
  selector:
    app: aceest-fitness
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
  sessionAffinity: ClientIP
